moved project data, added styling to projects, fixed z-index of nav bar

--- a/src/components/nav/navigation.scss
+++ b/src/components/nav/navigation.scss
@@ -2,6 +2,7 @@ div.Nav {
     background-color: black;
     padding-left: 10px;
     padding-right: 10px;
+    z-index:20;
 }
 
 div.Nav nav ul  {
